# spotsync

./: Cargo.toml
libmsntp/: Cargo.toml  build.rs
libmsntp/libmsntp/: socket.c
libmsntp/src/: lib.rs
src/: main.rs
